export interface Figure{
    addTransform(transform:string):void;
    draw():string;
}

